# CoCo

./: .coco_history  .env-context-management-example  .env.example  .gitignore  AUTOMATION_QUICK_START.md  AUTOMATION_TOGGLE_COMMANDS_COMPLETE.md  CLAUDE.md  CLAUDE_FULL.md  CLAUDE_SUGGESTED.md  CONTEXT_CRISIS_FIX_COMPLETE.md  CONTRIBUTING.md  CURATED_AUTOMATION_TEMPLATES.md  EMAIL_INDEX_FIX_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MEMORY_RESCUE_COMPLETE.md  OPTION_AB_IMPLEMENTATION_COMPLETE.md  README.md  TASK_AUTOMATION_FIXES.md  TWITTER_INTEGRATION.md  coco_automation.yml  coco_telegram.md  cocoa.py  cocoa_audio.py  cocoa_mcp.py.backup  cocoa_scheduler.py  cocoa_twitter.py  debug_senior_dev_test.eml  docker-compose.yml  gmail_consciousness.py  gmail_consciousness.py.backup  google_calendar_consciousness.py  google_workspace_consciousness.py  google_workspace_gmail_bridge.py  launch_eternal.sh  migrate_memory_db.py  personal_assistant_kg_enhanced.py  pyproject.toml  requirements.txt  setup_mcp.sh  (+11 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
archive/legacy/: adaptive_preferences_manager.py  coco_fresh_start_complete.py  coco_infinite_memory_prototype.py  coco_precision_memory_integration.py  cocoa_pre_eternal.py  cocoa_scheduler_fixed.py  debug_config_test.py  debug_working_memory.py  digital_consciousness_extensions.py  digital_sentience_clean_start.py  digital_sentience_integration.py  digital_sentience_kg.py  dynamic_knowledge_graph_layer4.py  email_restore.py  enhanced_gmail_consciousness.py  episodic_memory_fix.py  execute_digital_sentience_fresh_start.py  final_memory_system_validation.py  fix_context_building.py  fix_digital_sentience_fresh_start.py  get_google_tokens_manual.py  gmail_gentle_fix.py  google_workspace_simplified.py  integrate_conversational_buffer.py  integrate_temporal_consciousness.py  kg_fresh_start_guide.py  (+19 more)
coco/: __init__.py  __main__.py  cli.py  interfaces.py
docs/: ARCHITECTURE.md  DOCKER_SETUP.md  GOOGLE_OAUTH_SETUP.md  MEMORY_SYSTEM.md  QUICKSTART.md  TOOL_SYSTEM.md  TWITTER_MEDIA_INTEGRATION.md  TWITTER_RATE_LIMIT_DASHBOARD.md  TWITTER_SETUP.md
memory/: facts_memory.py
migrations/: add_facts_tables.py  add_facts_tables_sqlite.py
(+226 files in other folders)
